# SearchEngine

./: .gitignore  CMakeLists.txt  README.md  invertedlist.cpp  invertedlist.h  linkrelation.txt  main.cpp  searchengine.cpp  searchengine.h
content/: content0.txt  content1.txt  content10.txt  content100.txt  content1000.txt  content1001.txt  content1002.txt  content1003.txt  content1004.txt  content1005.txt  content1006.txt  content1007.txt  content1008.txt  content1009.txt  content101.txt  content1010.txt  content1011.txt  content1012.txt  content1013.txt  content1014.txt  content1015.txt  content1016.txt  content1017.txt  content1018.txt  content1019.txt  content102.txt  content1020.txt  content1021.txt  content1022.txt  content1023.txt  content1024.txt  content1025.txt  content1026.txt  content1027.txt  content1028.txt  content1029.txt  content103.txt  content1030.txt  content1031.txt  content1032.txt  (+7758 more)
content_final/: content0.txt  content1.txt  content10.txt  content100.txt  content1000.txt  content1001.txt  content1002.txt  content1003.txt  content1004.txt  content1005.txt  content1006.txt  content1007.txt  content1008.txt  content1009.txt  content101.txt  content1010.txt  content1011.txt  content1012.txt  content1013.txt  content1014.txt  content1015.txt  content1016.txt  content1017.txt  content1018.txt  content1019.txt  content102.txt  content1020.txt  content1021.txt  content1022.txt  content1023.txt  content1024.txt  content1025.txt  content1026.txt  content1027.txt  content1028.txt  content1029.txt  content103.txt  content1030.txt  content1031.txt  (+7759 more)
